--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
 <h1 style="color:blue;">Bienvenidos a "Cocina Argentina"</h1>
+    <link rel="stylesheet" href="css/estilo.css">
 <br>
 <img src="imagenes/locro" alt="Foto de un plato de locro">
 <br>
