--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>locro</title>
   </head>
   <body>
-<h1 style="color:blue;">Bienvenidos a "Cocina Argentina"</h1>
+<h1 Bienvenidos a "Cocina Argentina"</h1>
     <link rel="stylesheet" href="css/estilo.css">
 <br>
 <img src="imagenes/locro" alt="Foto de un plato de locro">
