--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>locro</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
-<h1 Bienvenidos a "Cocina Argentina"</h1>
-    <link rel="stylesheet" href="css/estilo.css">
+<h1 id="Bienvenidos"> "Cocina Argentina"</h1>
 <br>
 <img src="imagenes/locro" alt="Foto de un plato de locro">
 <br>
 <br>
 <br>
-<br>
-<h2>Hoy Día Locro Bien Argento</h2>
-<h3>Comenzemos!!!!</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/t4xITV0w7ig" title="YouTube video player" frameborder="0" allow="accelerometer;
+<h2>Hoy Día Locro Bien Argento"</h2>
+
+<!-- este titulo va en color-->
+<h3>Comenzemos!!!</h3>
+<iframe width="300" height="315" src="https://www.youtube.com/embed/t4xITV0w7ig" title="YouTube video player" frameborder="0" allow="accelerometer;
 autoplay; clipboard-write;
  encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <br>
  <a href="https://www.cucinare.tv/?gclid=CjwKCAjwgr6TBhAGEiwA3aVuIcECcR-LOhw_
- r4ZCP_BHt7BTAHwHHU0RwlJq3_TJPpjy4LiFBTSzLBoCFzUQAvD_BwE" target="_blank">CucinareTV</a>
+ r4ZCP_BHt7BTAHwHHU0RwlJq3_TJPpjy4LiFBTSzLBoCFzUQAvD_BwE" target="_blank
+ ">CucinareTV</a>
  <br>
  <a href="locro.pdf">descargar pdf</a>
+ <br>
+<video src="imagenes/video_locro.mp4"
+ poster="imagenes/video_locro.mp4" controls>
+</video>
 <p>Es un plato elaborado a base de maíz blanco porotos y zapallo.
   Requiere una cocción prolongada
 por lo que permite utilizar cortes de carne como la falda.Por su historia y lo que
@@ -81,6 +87,7 @@ el aceite a baja temperatura.
     para incorporar a gusto.</li>
     <ol>
       <!--aquí termina la receta-->
-
-</body>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13385.575572964772!2d-68.69665787336764!3d-32.99338929715792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e6d332514f355%3A0x19d983d0a7268135!2sRodeo%20del%20Medio%2C%20Mendoza!5e0!3m2!1ses-419!2sar!4v1652217779758!5m2!1ses-419!2sar
+" width="200"
+height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </html>
