--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>locro</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="estilo.css.css" title=text/css>
   </head>
   <body>
 <h1 id="Bienvenidos"> "Cocina Argentina"</h1>
